Click NEWS

Version 1.2.3   4.Dec.2001

* Drivers

** Linux kernel module: Rename Click kernel threads to "kclick".

** User-level driver: Add `-e' option.

** Various Linux 2.4 improvements.

** FreeBSD driver is coming along nicely. You should compile this version
   of the driver against an *unmodified* FreeBSD kernel (RELENG_4 branch,
   version 440002 or later). Thanks to Luigi Rizzo, some of the
   improvements in the Click kernel patch have been checked in to the
   latest FreeBSD source! Bug fixes: can handle chained mbufs, etc.

** Better support for cross-compiling tools, via the `--enable-tools'
   configuration switch.

** Linux kernel module: Bug fixes, from Mazu, for dynamic installation and
   removal of devices, and for receiving large packets.

* Elements

** Added a collection of analysis-related elements; give
   `--enable-analysis' to ./configure. Elements include FromIPSummaryDump
   and ToIPSummaryDump (read and write ASCII summary files; see
   http://www.aciri.org/kohler/ipsumdump/), FromNetFlowSummaryDump (read
   ASCII NetFlow summary files), AnonymizeIPAddr (anonymize IP addresses
   while preserving prefixes), MergeByTimestamp (merge multiple time-sorted
   packet streams into a single time-sorted stream), TimeFilter (select
   packets by timestamp), and TimeRange (monitors packet timestamps).

** New elements: StripToNetworkHeader, ProgressBar (prints an ultra-cool
   progress bar to standard error), etc.

** CheckIPHeader and friends set the destination IP address annotation from
   the IP header's destination address.

** IPClassifier/IPFilter supports more >/>=/</<= comparisons, and gives
   better error messages on comparisons it does not support.

** RED handles long quiescent periods better. As a result, Queue and
   friends could remove their annoying _empty_jiffies member. Also, RED
   uses the Gentle variant recommended by the RED gods.

** Added AdaptiveRED element, by Jitendra Padhye <padhye@aciri.org>.
